<resources>
    <string name="app_name">CodeKendra</string>
    <string name="Sign_in">Sign in</string>
    <string name="Or">Or</string>
    <string name="Join_code_kendra">Join CodeKendra</string>
    <string name="With_google">Sign in with Google</string>
    <string name="with_facebook">Sign in with Facebook</string>
    <string name="Continue">Continue</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="forget_password">Forget Password?</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign up</string>
    <string name="join_codekendra">Sign in CodeKendra</string>
   <string name="email">Enter your email</string>
    <string name="agreement">By clicking Continue, You agree to the code
kendra
</string>
    <string name ="agreement2">User Agreement, Privacy policy, and Cookies Policy.</string>
    <string name="agreement3">For email Signups we will send a verification code via mail.</string>
    <string name="password_field">Password</string>
    <string name="forget_password_activity">Forget Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="back_to_sign_in">Back to sign in</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="change_password">Change password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_new_password_hint">Enter new password</string>
    <string name="Progress_username">Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="type_something">Type something...</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="goofydev">GoofyDev</string>
    <string name="online">Online</string>
    <string name="posting_as_goofy">Posting as Goofy</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="add_image">Add Image</string>
    <string name="add_video">Add Video</string>
    <string name="upload">Upload</string>
    <string name="post_image">Post Image</string>
    <string name="remove_image">Remove</string>
    <string name="post_title_goes_here">Post Title Goes Here</string>
    <string name="by_author_name_july_3_2025">By Author Name | July 3, 2025</string>
    <string name="server_ip">192.168.1.10</string> //CHANGE YOUUR IP HERE=====================================================
     <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account_center">Account Center</string>
    <string name="update_your_credentials">Update your credentials</string>
    <string name="change_password_activity">Change Password</string>
    <string name="connection_failed">"Connection failed: "</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="account_center1">Account Center</string>
    <string name="code_kendra">CODE KENDRA</string>
    <string name="todo3">TODO</string>
    <string name="update_your_credentials_xml">Update Your Credentials</string>

    <!-- Create Post Screen -->
    <string name="whats_on_mind">What\'s on your mind?</string>
    <string name="content_hint">Share your thoughts, ask a question, or start a discussion…</string>
    <string name="code_optional">📄 Code (Optional)</string>
    <string name="code_hint">Paste your code here…</string>
    <string name="tags_label"># Tags</string>
    <string name="tag_hint">Add a tag…</string>
    <string name="add_tag">Add</string>
    <string name="post_button">✈️ Post</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <!-- Language Options -->
    <string name="select_language">Select Language</string>
    <string name="language_placeholder">Choose a programming language</string>

    <!-- Programming Languages -->
    <string-array name="programming_languages">
        <item>javascript</item>
        <item>typescript</item>
        <item>python</item>
        <item>java</item>
        <item>cpp</item>
        <item>rust</item>
        <item>go</item>
        <item>php</item>
        <item>ruby</item>
        <item>swift</item>
        <item>kotlin</item>
        <item>dart</item>
    </string-array>

    <!-- Content Descriptions -->
    <string name="image_icon">Add image</string>
    <string name="link_icon">Add link</string>
    <string name="code_icon">Code block</string>
    <string name="tag_icon">Tag</string>
    <string name="cd_more_options" />
    <string name="cd_comment" />
    <string name="like">\n</string>
    <string name="cd_user_post" />

</resources>